--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node-dev --inspect --ignore-watch node_module src/shared/core/app.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "typescript-eslint": "^7.8.0"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2"
   }
 }
